SampleExample/default/tea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-svc
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: default
